--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Emerson Nóbrega</h1>
         <h5>Desenvolvedor </br> Front-end</h5>
         <p>Oi Eu sou o Emerson! 
-            Trabalho a 10 anos como Suporte Técnico, sou formado em sistema para internet e fazendo pós graduação em Engenharia de software.
+            Trabalho a 10 anos como Suporte Técnico, sou formado em Sistema para Internet e fazendo pós graduação em Engenharia de software.
             Busco uma chance de mudar de área e me tornar um desenvolvedor.
         </p>
         <ul>
