--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="box">
         <img src="img/emerson.jfif" alt="" class="box-img">
         <h1>Emerson Nóbrega</h1>
-        <h5>Desenvolvedor </br> Front-end</h5>
+        <h5>Desenvolvedor </br> Front-end / Back-End</h5>
         <p>Oi Eu sou o Emerson! 
             Trabalho a 10 anos como Suporte Técnico, sou formado em Sistema para Internet e fazendo pós graduação em Engenharia de software.
             Busco uma chance de mudar de área e me tornar um desenvolvedor.
@@ -28,8 +28,7 @@
             <li><i class="fa-brands fa-css3-alt"></i></li>
             <li><i class="fa-brands fa-js"></i></li>
             <li><i class="fa-brands fa-git-square"></i></li>
-            <li><i class="fa-brands fa-node"></i></li>
-            <li><i class="fa-brands fa-react"></i></li>
+            <li><i class="fa-brands fa-python"></i></li>
         </ul>
     </section>
 </body>
