Atualizando meu site

--- a/index.html
+++ b/index.html
@@ -6,29 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5cce2a39f5.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="css/style.css">
-    <title>Emerson Nóbrega - Desenvolvedor Front-end</title>
+    <title>Emerson Nóbrega - Analista de Dados</title>
 </head>
 <body>
     <section class="box">
         <img src="img/emerson.jfif" alt="" class="box-img">
         <h1>Emerson Nóbrega</h1>
-        <h5>Desenvolvedor </br> Front-end / Back-End</h5>
-        <p>Oi Eu sou o Emerson! 
-            Trabalho a 10 anos como Suporte Técnico, sou formado em Sistema para Internet e fazendo pós graduação em Engenharia de software.
-            Busco uma chance de mudar de área e me tornar um desenvolvedor.
+        <h5>Analista de Dados</h5>
+        <p>Sou formado em Sistemas para Internet e atuo na área de suporte técnico há mais de 10 anos. Recentemente, decidi investir em minha carreira e estou cursando uma pós-graduação em Ciência de Dados. Meu objetivo é migrar para a área de análise de dados, aplicando as habilidades e conhecimentos adquiridos em minha trajetória profissional. Estou em busca de novos desafios e oportunidades para colaborar com projetos que possam fazer a diferença no mundo.
         </p>
         <ul>
             <li><a href="https://github.com/emersonnobrega" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a></li>
             <li><a href="https://www.linkedin.com/in/emerson-n%C3%B3brega-de-oliveira-81006167/" target="_blank"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-        </ul>
-
-        <ul class="skills">
-            <h2>Habilidades</h2>
-            <li><i class="fa-brands fa-html5"></i></li>
-            <li><i class="fa-brands fa-css3-alt"></i></li>
-            <li><i class="fa-brands fa-js"></i></li>
-            <li><i class="fa-brands fa-git-square"></i></li>
-            <li><i class="fa-brands fa-python"></i></li>
         </ul>
     </section>
 </body>
