--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/5cce2a39f5.js" crossorigin="anonymous"></script>  
-    <link rel="stylesheet" href="css/style.css">
-    <title>Emerson Nóbrega - Analista de Dados</title>
-</head>
-<body>
-    <section class="box">
-        <img src="img/emerson.jfif" alt="" class="box-img">
-        <h1>Emerson Nóbrega</h1>
-        <h5>Analista de Dados</h5>
-        <p>Sou formado em Sistemas para Internet e atuo na área de suporte técnico há mais de 10 anos. Recentemente, decidi investir em minha carreira e estou cursando uma pós-graduação em Ciência de Dados. Meu objetivo é migrar para a área de análise de dados, aplicando as habilidades e conhecimentos adquiridos em minha trajetória profissional. Estou em busca de novos desafios e oportunidades para colaborar com projetos que possam fazer a diferença no mundo.
-        </p>
-        <ul>
-            <li><a href="https://github.com/emersonnobrega" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/emerson-n%C3%B3brega-de-oliveira-81006167/" target="_blank"><i class="fa-brands fa-linkedin" aria-hidden="true"></i></a></li>
-        </ul>
-    </section>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Emerson Nóbrega</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&amp;display=swap" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body>
+        <video class="bg-video" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop"><source src="assets/mp4/bg.mp4" type="video/mp4" /></video>
+        <div class="masthead">
+            <div class="masthead-content text-white">
+                <div class="container-fluid px-4 px-lg-0">
+                    <h1 class="fst-italic lh-1 mb-4">Oi Eu sou o Emerson!</h1>
+                    <p class="mb-5">Analista de Dados e Desenvolvedor Python</p>                   
+                </div>
+            </div>
+        </div>
+        <div class="social-icons">
+            <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
+                <a class="btn btn-dark m-3" href="https://www.linkedin.com/in/emerson-n%C3%B3brega-de-oliveira-81006167/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a class="btn btn-dark m-3" href="https://github.com/emersonnobrega" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a class="btn btn-dark m-3" href="https://dev.to/emersonnobrega" target="_blank"><i class="fa-brands fa-dev"></i></a>
+            </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="js/scripts.js"></script>
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    </body>
 </html>
