--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="masthead">
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
-                    <h1 class="fst-italic lh-1 mb-4">Oi Eu sou o Emerson!</h1>
+                    <h1 class="fst-italic lh-1 mb-4">Oi, Eu sou o Emerson!</h1>
                     <p class="mb-5">Analista de Dados e Desenvolvedor Python</p>                   
                 </div>
             </div>
