--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">Oi, Eu sou o Emerson!</h1>
-                    <p class="mb-5">Analista de Dados e Desenvolvedor Python</p>                   
+                    <p class="mb-5">Suporte Técnico em Migração para Análise de Dados</p>                   
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
             <div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0">
                 <a class="btn btn-dark m-3" href="https://www.linkedin.com/in/emerson-n%C3%B3brega-de-oliveira-81006167/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a class="btn btn-dark m-3" href="https://github.com/emersonnobrega" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a class="btn btn-dark m-3" href="https://dev.to/emersonnobrega" target="_blank"><i class="fa-brands fa-dev"></i></a>
+                <a class="btn btn-dark m-3" href="https://medium.com/@emersonnobrega10" target="_blank"><i class="fa-brands fa-medium"></i></a>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
