--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="masthead-content text-white">
                 <div class="container-fluid px-4 px-lg-0">
                     <h1 class="fst-italic lh-1 mb-4">Oi, Eu sou o Emerson!</h1>
-                    <p class="mb-5">Suporte Técnico em Migração para Análise de Dados</p>                   
+                    <p class="mb-5">Suporte Técnico em Migração para Engenharia de Dados</p>                   
                 </div>
             </div>
         </div>
